--- a/games/pirate/stylesheets/components/_client_action_panel.scss
+++ b/games/pirate/stylesheets/components/_client_action_panel.scss
@@ -6,7 +6,6 @@
 	padding-left: 10%;
 	padding-right: 10%;
 	width: 80%;
-	position: fixed;
 }
 
 .pi-cs-action-panel-bidding {
